# fixfleet

./: .gitignore  LICENSE  README.md  fix_bugs.py  install.sh  pyproject.toml
.claude/: settings.json
.github/workflows/: publish-pypi.yml  publish-vscode.yml
bugfixer/: __init__.py  budget.py  cli.py  confidence.py  config.py  gitlab.py  json_api.py  locator.py  parser.py  prompt.py  state.py  ui.py
bugfixer/backends/: __init__.py  _subprocess.py  base.py  registry.py
bugfixer/backends/api/: __init__.py  openai_compat.py
bugfixer/backends/cli/: __init__.py  aider.py  claude.py  codex.py  cursor.py  gemini.py  qwen.py
bugfixer/providers/: __init__.py  azure.py  base.py  bitbucket.py  github.py  gitlab.py  jira.py  linear.py  registry.py
instagram-analytics/: fetch_followers.py
tests/: test_all.py  test_providers_qa.py
vscode/: .vscodeignore  README.md  package-lock.json  package.json
vscode/src/: bugPanel.ts  bugProvider.ts  extension.ts  fixfleetCli.ts  settingsPanel.ts  welcomeView.ts
