[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixfleet"
version = "0.4.0"
description = "Auto-fix GitLab bugs with AI agents — bring your own CLI or free API."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Yash Koladiya" },
]
keywords = [
    "gitlab", "ai-agent", "bug-fixer", "claude-code", "codex",
    "gemini", "cursor", "aider", "ollama", "groq", "openrouter",
    "agentic-ai", "automation", "cli-tool", "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
# Pure stdlib — no runtime dependencies.
dependencies = []

[project.urls]
Homepage = "https://github.com/Yash-Koladiya30/fixfleet"
Repository = "https://github.com/Yash-Koladiya30/fixfleet"
Issues = "https://github.com/Yash-Koladiya30/fixfleet/issues"

[project.scripts]
fixfleet = "bugfixer.json_api:main"
fix-bugs = "bugfixer.json_api:main"

[tool.setuptools]
packages = [
    "bugfixer",
    "bugfixer.backends",
    "bugfixer.backends.cli",
    "bugfixer.backends.api",
]

[tool.setuptools.package-data]
bugfixer = ["py.typed"]
